<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForumBoardNewTaskActivity">

    <include
        android:id="@+id/include5"
        layout="@layout/activity_nav_bar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/forum_board_new_task_deadline"
        android:layout_width="320dp"
        android:layout_height="23dp"
        android:background="@null"
        android:ems="10"
        android:hint="Deadline (MMDDYYYY)"
        android:maxLength="8"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/forum_board_divider7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forum_board_divider6"
        app:layout_constraintVertical_bias="0.523" />

    <EditText
        android:id="@+id/forum_board_new_task_expected"
        android:layout_width="320dp"
        android:layout_height="23dp"
        android:background="@null"
        android:ems="10"
        android:hint="Expected days to complete"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/forum_board_divider6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forum_board_divider4"
        app:layout_constraintVertical_bias="0.526" />

    <EditText
        android:id="@+id/forum_board_new_task_title"
        android:layout_width="320dp"
        android:layout_height="23dp"
        android:background="@null"
        android:ems="10"
        android:hint="Title"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/forum_board_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="320dp"
        android:layout_height="23dp"
        android:background="@null"
        android:ems="10"
        android:text="Minimum Rating"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/forum_board_divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forum_board_divider3" />

    <EditText
        android:id="@+id/forum_board_new_task_body"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:background="@null"
        android:ems="10"
        android:gravity="top|start"
        android:hint="Body"
        android:inputType="textMultiLine"
        android:lines="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forum_board_divider"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/forum_board_new_task_reward"
        android:layout_width="320dp"
        android:layout_height="23dp"
        android:background="@null"
        android:ems="10"
        android:hint="Reward"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/include5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forum_board_divider7"
        app:layout_constraintVertical_bias="0.059" />

    <View
        android:id="@+id/forum_board_divider7"
        android:layout_width="320dp"
        android:layout_height="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="39dp"
        android:background="@color/plotpals_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.71" />

    <View
        android:id="@+id/forum_board_divider6"
        android:layout_width="320dp"
        android:layout_height="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="39dp"
        android:background="@color/plotpals_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.631" />

    <View
        android:id="@+id/forum_board_divider4"
        android:layout_width="320dp"
        android:layout_height="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="39dp"
        android:background="@color/plotpals_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.554" />

    <View
        android:id="@+id/forum_board_divider3"
        android:layout_width="320dp"
        android:layout_height="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="39dp"
        android:background="@color/plotpals_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.476" />

    <View
        android:id="@+id/forum_board_divider"
        android:layout_width="320dp"
        android:layout_height="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="39dp"
        android:background="@color/plotpals_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.104" />

    <ImageView
        android:id="@+id/forum_board_new_task_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:srcCompat="@drawable/check" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="235dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="76dp"
        android:gravity="top"
        android:text="New Task"
        android:textAppearance="@style/page_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/forum_board_new_task_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:srcCompat="@drawable/x" />

    <RatingBar
        android:id="@+id/forum_board_new_task_ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:numStars="5"
        android:scaleX=".5"
        android:scaleY=".5"
        android:transformPivotX="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/include5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forum_board_divider3"
        app:layout_constraintVertical_bias="0.038" />

    <!--    <DatePicker-->
    <!--        android:id="@+id/forum_board_new_task_datepicker"-->
    <!--        android:layout_width="269dp"-->
    <!--        android:layout_height="439dp"-->
    <!--        android:background="@color/plotpals_grey"-->
    <!--        tools:layout_editor_absoluteX="126dp"-->
    <!--        tools:layout_editor_absoluteY="104dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>